# polza-hermes-plugin

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEVELOPMENT.md  Makefile  README.md  README_EN.md  README_RU.md  pyproject.toml
.cursor/backlog/: each-step-log.mdc  significant-changes-summary.mdc
.github/workflows/: test.yml
plugins/image_gen/polza/: AGENTS.md  ARCHITECTURE.md  __init__.py  _utils.py  plugin.yaml
plugins/model-providers/polza/: AGENTS.md  __init__.py  plugin.yaml
plugins/polza-balance/: AGENTS.md  ARCHITECTURE.md  __init__.py  plugin.yaml
scripts/: check-balance.py  polza-doctor.py
tests/: helpers.py  test_polza_balance.py  test_polza_image_gen.py  test_polza_live.py  test_polza_profile.py
