[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "polza-hermes-plugin"
version = "1.0.0"
description = "Polza.ai model provider plugin for Hermes Agent"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=7",
    "openai>=1.0",
    "requests>=2",
]
