[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polza-hermes-plugin"
version = "1.0.0"
description = "Polza.ai model provider plugin for Hermes Agent"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "requests>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "openai>=1.0",
    "requests>=2",
    "pyyaml>=6",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]
per-file-ignores = { "plugins/polza-balance/*" = ["E501"], "plugins/polza-balance/__init__.py" = ["N999"] }

[tool.ruff.format]
quote-style = "double"
